fix font size problem on iOS

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -208,6 +208,11 @@
     border-radius: var(--radius);
     overflow-x: auto;
     word-break: break-all;
+
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
 .post-content blockquote {
